# pyPhyEqs

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
physics/: centrifuge.py  importantConstants.py  kinematics.py  leastAction.py  schwarzschileBH.py  timeDialation.py  timeDialationBlackHole.py  trajectory.py
