[build-system]
requires = ["hatchling >= 1.27"]
build-backend = "hatchling.build"

[project]
name = "pyPhyEqs"
version = "1.0"
dependencies = [
    "httpx",
    "matplotlib >= 3.10.7",
    "numpy >= 2.3.4",
]
requires-python = ">= 3.12.1"
authors = [
    {name = "1nonl1", email = "example@gmail.com"},
]
description = "A physics package that has random functions"
readme = "README.md"
keywords = ["physics", "py"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
]

[tool.hatch.build.targets.wheel]
packages = ["physics"]
